--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,8 @@ version: '3'
 services: 
     postgres:
         image: 'postgres:latest'
+        environment:
+            - POSTGRES_PASSWORD=postgres_password
     redis:
         image: 'redis:latest'
     server:
@@ -11,3 +13,11 @@ services:
         volumes:
             - /app/node_modules
             - ./sever:app:/app
+        environment: 
+            - REDIS_HOST=redis
+            - REDIS_PORT=6739
+            - PGUSER=postgres
+            - PGHOST=postgres
+            - PGDATABASE=postgres
+            - PGPASSWORD=postgres_password
+            - PGPORT=5432
